fixed responsiveness on smaller screens

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -91,8 +91,9 @@
 }
 @media (max-width: 750px) {
   .cart-items-title {
-    font-size: small;
-    grid-template-columns: 1fr 1.5fr 1fr 1.5fr 1fr 0.5fr;
+    font-size: 14px;
+    grid-template-columns: 1fr 1.5fr 1fr;
+    gap: 12px;
   }
   .cart-bottom {
     flex-direction: column-reverse;
